# undercover

./: .env  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  PROJECT_HEALTH_CHECK.md  README.md  app.py  docker-compose.dev.yml  docker-compose.yml  menu_config.json  migration_guide.md  pyproject.toml  pytest.ini  requirements.txt  skills-lock.json
.github/workflows/: cd-k8s.yml  cd-local.yml
.trae/hooks/: README.md  pre-commit-check.py
.trae/skills/: .skills_store_lock.json
backend/: .coveragerc  .dockerignore  .env.example  .env.local  .envrc  .gitignore  BACKEND_INDEPENDENT_SUMMARY.md  Dockerfile  PROJECT_RESTRUCTURE_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  TODO.md  app_factory.py  docker-compose.dev.yml  docker-compose.yml  extensions.py  main.py  pyproject.toml  pytest.ini  requirements.txt  wsgi.py
backend/api/: __init__.py  auth.py  decorators.py  game.py  room.py
backend/config/: __init__.py  commands_config.py  game_config.py  messages.py  settings.py
backend/docs/: architecture.md  deployment.md  developer_guide.md  exception_handling_detailed.md  game-config-mechanism.md  project-prompt.md  requirement.md  state_machine.md
backend/exceptions/: __init__.py  base.py  (+2 more)
docs/: architecture.md  exception_handling.md  state_machine.md
frontend/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  QUICKSTART.md  README.md  jest.config.js  package-lock.json  package.json  project.config.json  project.private.config.json  tsconfig.json
src/: app_factory.py  main.py  messages.py
tests/: TEST_PLAN.md  conftest.py  test_coverage.py  test_coverage.py.old
(+236 files in other folders)
