[project]
name = "mp-undercover"
version = "0.1.0"
description = "WeChat Undercover Game"
authors = [
    {name = "Xiaolin"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0.0",
    "gunicorn>=21.2.0",
    "redis>=5.0.1",
    "requests>=2.31.0",
    "wechatpy>=1.8.18",
    "cryptography>=41.0.7",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.2",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.6",
    "fakeredis>=2.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
